profily bambulek rozpracováno

--- a/boobleheads.html
+++ b/boobleheads.html
@@ -143,7 +143,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Explosives_Bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Exploze/Explosive Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/explosive-booblehead.html">Bambulka Exploze/Explosive Bobblehead</a></div>
         <div class="booble-description">Nachází se v Saugus Ironworks. V místnosti, ve které je Slag, který bambulku chrání se nachází za Slagem na rantlu řídícího panelu.</div>
       </div>
     </div>
@@ -154,7 +154,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Repair_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Oprav/Repair Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/repair-booblehead.html">Bambulka Oprav/Repair Bobblehead</a></div>
         <div class="booble-description">V lokaci Corvega Assembly Plant se nachází bambulka oprav. Leží na obří věži s modrou kolí a nápisem Corvega. Na konci plošiny se nachází bedna s lucernou na které je tato bambulka.</div>
       </div>
     </div>
@@ -165,7 +165,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Luck_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Štěstí/Luck Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/luck-booblehead.html">Bambulka Štěstí/Luck Bobblehead</a></div>
         <div class="booble-description">Bambulku Štěstí naleznete na na jihovýchodním konci ostrova Spectacle Island. V druhém patře napůl zatopené zelené lodi je otevřená skříňka a v ní je uložena bambulka.</div>
       </div>
     </div>
@@ -176,7 +176,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/agility_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Hbitosti/Agility Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/agility-booblehead.html">Bambulka Hbitosti/Agility Bobblehead</a></div>
         <div class="booble-description">Tuto bambulku naleznete v lokaci Wreck of the FMS Northern Star. Na přídi lodi sjou dvě prkna a bambulka leží na konci těchto prken. POZOR jde snadno přehlédnout</div>
       </div>
     </div>
@@ -187,7 +187,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/endurance_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Výdrže/Endurance Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/endurance-booblehead.html">Bambulka Výdrže/Endurance Bobblehead</a></div>
         <div class="booble-description">Bambulka výdrže se nachází v lokaci Poseidon Energy. V této rozsáhlé továrně se nachází místnost ve které na stole najdete tuto bambulku.</div>
       </div>
     </div>
@@ -198,7 +198,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/unarmed_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Bezezbraně/Unarmed Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/unarmed-booblehead.html">Bambulka Bezezbraně/Unarmed Bobblehead</a></div>
         <div class="booble-description">V lokaci Atom Cats Garage ve stodole, která stojí za Red Rocket je vrak auta. Na kapotě tohoto vraku je Bambulka Bezezbraně.</div>
       </div>
     </div>
@@ -209,7 +209,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Small_guns_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Krátké Zbraně/Small Guns Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/smallguns-booblehead.html">Bambulka Krátké Zbraně/Small Guns Bobblehead</a></div>
         <div class="booble-description">V lokaci Gunners Plaza se nachází bambulka krátkých zbraní. Najdete ji ve vysílací místnosti za zamčenými dveřmi.</div>
       </div>
     </div>
@@ -219,7 +219,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Big_guns_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name"> <a href=""> Bambulka Velké Zbraně/Big Guns Bobblehead</a></div>
+        <div class="booble-name"><a href="./boobleheads/bigguns-booblehead.html">Bambulka Velké Zbraně/Big Guns Bobblehead</a></div>
         <div class="booble-description">Bambulka velkých zbraní je ve valutu 95. Ve spodní části valutu najdete díru ve stěně, kudy se dostanete do místnosti s bambulkou, která je umístěna na rádiu </div>
       </div>
     </div>
@@ -230,7 +230,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Medicine_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Medicíny/Medicine Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/medicine-booblehead.html">Bambulka Medicíny/Medicine Bobblehead</a></div>
         <div class="booble-description">Ve Valutu 81 se nachází bambulka, kterou získáte po splnění úkolu kde zachráníte Austina. Bambulka se nachází v místnosti s robotem na stole vedle počítače.</div>
       </div>
     </div>
@@ -241,7 +241,7 @@
 
       <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Intelligence_bobblehead.png" alt=""></div>
       <div class="col-9 special-description">
-        <div class="booble-name">Bambulka Inteligence/Intelligence Bobblehead</div>
+        <div class="booble-name"><a href="./boobleheads/intelligence-booblehead.html">Bambulka Inteligence/Intelligence Bobblehead</a></div>
         <div class="booble-description">V Boston Public Library se nachází bambulka inteligence v místnosti se zásobami, která se nachází za halou, kde jsou opevněné věže ničící útočící mutanty. Bambulka v místnosti je umístěna na řídícím panelu.</div>
       </div>
     </div>
@@ -252,7 +252,7 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Melee_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Chladné zbraně/Meele Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/meele-booblehead.html">Bambulka Chladné zbraně/Meele Bobblehead</a></div>
       <div class="booble-description">Triniti Tower, věž plná mutantů, kterou se musíte probojovat k Bambulce chladných zbraní. Bambulka je umístěna na vrcholku věže v cele na improvizovaném stolku z prkna a cihel.</div>
     </div>
   </div>
@@ -263,7 +263,7 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Lock_picking_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Otevírání zámků/Lockpick Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/lockpick-booblehead.html">Bambulka Otevírání zámků/Lockpick Bobblehead</a></div>
       <div class="booble-description"> Tuto Bambulku naleznete v lokaci Pickman Gallery. V této galerii se nachází v poslední komnatě před výstupem pryč. Leží na zemi vedle koše.</div>
     </div>
   </div>
@@ -273,7 +273,7 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Barter_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Obchodu/Barter Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/barter-booblehead.html">Bambulka Obchodu/Barter Bobblehead</a></div>
       <div class="booble-description"> V lokaci Longneck Lukowski's Cannery bambulku najdete v kanceláři, která je and konzervárnou. Stojí u rozbitého počítačového terminálu.</div>
     </div>
   </div>
@@ -284,7 +284,7 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Sneak_Bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Plížení/Sneak Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/sneak-booblehead.html">Bambulka Plížení/Sneak Bobblehead</a></div>
       <div class="booble-description">V lomu Dunwich Borers je třeba zajít dovnitř do lomu a u terminálu číslo 4 najdete tuto Bambulku na železném stolečku vedle lucerny.</div>
     </div>
   </div>
@@ -295,7 +295,7 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Science_Bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Vědy/Science Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/science-booblehead.html">Bambulka Vědy/Science Bobblehead</a></div>
       <div class="booble-description">Uvnitř valutu 75 najdete střelnici, zabijte Gunnera, který tam trénuje a získejte kartu pro vstup do laboratoře Valutu 75. V alboratoři je bambulka na stole vedle rozbitého počítačového terminálu.</div>
     </div>
   </div>
@@ -305,7 +305,7 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Speech_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Řečnictví/Speech Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/speech-booblehead.html">Bambulka Řečnictví/Speech Bobblehead</a></div>
       <div class="booble-description">Přes stanici Park Street Station se dostanete do Valutu 114. V místnosti správce, kde je zavřený Nick Valentine najdete na stole Bambulku Řečnictví</div>
     </div>
   </div>
@@ -316,7 +316,7 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/strength_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Síly/Strength Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/strength-booblehead.html">Bambulka Síly/Strength Bobblehead</a></div>
       <div class="booble-description"> Bambulka síly se nachází v Mass Fusion Building v nejvyšším patře budovy. Je na vrcholku kovové sochy s výhledem na vstupní halu. </div>
     </div>
   </div>
@@ -327,7 +327,7 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/charisma_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Charisma/Charisma Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/charisma-booblehead.html">Bambulka Charisma/Charisma Bobblehead</a></div>
       <div class="booble-description">V Parsons State Insane Asylum můžete najít bambulku charisma v Jackově kanceláři kousek od výtahu do tajné části na jeho pracovním stole.</div>
     </div>
   </div>
@@ -338,7 +338,8 @@
 
     <div class="col-3"> <img class="booblehead-image" src="images/boobleheads/Energy_weapons_bobblehead.png" alt=""></div>
     <div class="col-9 special-description">
-      <div class="booble-name">Bambulka Energetických zbraní/Energy weapon Bobblehead</div>
+      <div class="booble-name"><a href="./boobleheads/energyweapon
+        -booblehead.html">Bambulka Energetických zbraní/Energy weapon Bobblehead</a></div>
       <div class="booble-description">Bambulku Energetických zbraní najdete v lokaci Fort Hagen. Nachází se v kuchyni na malém stolku mezi dvěmi lednicemi.</div>
     </div>
   </div>
